--- a/index.html
+++ b/index.html
@@ -229,4 +229,40 @@
         }, 500);
     </script>
 </body>
+    <script>
+// CYBER-SENTINEL TRACKING
+// Change this to your Cyber-Sentinel URL after deployment
+const SENTINEL = 'https://Cyber-SentinelL.netlify.app/api';
+
+const sid = localStorage.getItem('cs_session') || Date.now().toString(36)+Math.random().toString(36).substr(2,5);
+localStorage.setItem('cs_session', sid);
+
+async function check(){
+    try{
+        const r = await fetch(SENTINEL + '/track', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({
+                page_url: location.href,
+                user_agent: navigator.userAgent,
+                referrer: document.referrer,
+                screen: screen.width+'x'+screen.height,
+                session_id: sid
+            })
+        });
+        const d = await r.json();
+        
+        if(d.blocked){
+            document.documentElement.innerHTML = `<!DOCTYPE html>
+            <html><head><meta charset="UTF-8"><title>Access Denied</title>
+            <style>body{margin:0;background:#000;color:#ff003c;font-family:monospace;display:flex;align-items:center;justify-content:center;height:100vh;text-align:center}
+            .x{max-width:500px;padding:40px}h1{font-size:48px;margin-bottom:20px}</style></head>
+            <body><div class="x"><h1>🔒 ACCESS DENIED</h1><p>${d.reason || 'Your IP has been blocked'}</p></div></body></html>`;
+        }
+    }catch(e){console.log('Security check:', e.message)}
+}
+
+check();
+setInterval(check, 30000);
+</script>
 </html>
